call of duty update

--- a/products/call-of-duty-black-ops-cold-war.html
+++ b/products/call-of-duty-black-ops-cold-war.html
@@ -451,7 +451,7 @@ Purchase Now*
 </div>
 <div>
 <span class="flex rounded-md shadow-sm ">
-<a href="https://interwebz-cheats.com/community/threads/call-of-duty-black-ops-cold-war.67320/" class="inline-flex items-center justify-center border font-medium focus:outline-none transition duration-150 ease-in-out disabled:opacity-75 disabled:cursor-not-allowed px-8 py-3 text-base leading-6 rounded-md md:text-lg border border-neutral-350 text-neutral-200 bg-neutral-400 hover:bg-neutral-350 hover:text-neutral-100 focus:bg-neutral-350 focus:text-neutral-100 focus:ring ring-neutral-300 ring-opacity-75 active:text-neutral-100 active:bg-neutral-300 transition disabled:pointer-events-none disabled:opacity-75 disabled:cursor-not-allowed w-full" size="xxl" href="https://interwebz-cheats.com/community/threads/call-of-duty-black-ops-cold-war.67320/" target="__blank" wire:loading.attr="disabled">
+<a href="" class="inline-flex items-center justify-center border font-medium focus:outline-none transition duration-150 ease-in-out disabled:opacity-75 disabled:cursor-not-allowed px-8 py-3 text-base leading-6 rounded-md md:text-lg border border-neutral-350 text-neutral-200 bg-neutral-400 hover:bg-neutral-350 hover:text-neutral-100 focus:bg-neutral-350 focus:text-neutral-100 focus:ring ring-neutral-300 ring-opacity-75 active:text-neutral-100 active:bg-neutral-300 transition disabled:pointer-events-none disabled:opacity-75 disabled:cursor-not-allowed w-full" size="xxl" target="__blank" wire:loading.attr="disabled">
 Learn More...
 </a>
 </span>
@@ -470,7 +470,7 @@ Learn More...
 <div class="items-center justify-center hidden px-8 md:flex lg:mt-20 lg:pr-0 lg:pl-12">
 <div class="relative w-full h-56 max-w-2xl sm:h-96 z-6">
 <div class="relative rounded-lg shadow-xl focus:outline-none focus:ring ring-neutral-300 ring-opacity-75">
-<a href="https://interwebz-cheats.com/storage/468/6ba58932-dd2b-4055-bb59-1effd2752c0e.jpg?w=1280" class="product-image-gallery">
+<a href="" class="product-image-gallery">
 <img class="w-full rounded-md shadow" src="https://interwebz-cheats.com/storage/468/6ba58932-dd2b-4055-bb59-1effd2752c0e.jpg" alt="Call of Duty: Black Ops Cold War Promotional Image" />
 </a>
 </div>
@@ -502,17 +502,17 @@ Learn More...
 <div class="glide__track" data-glide-el="track">
 <ul class="glide__slides">
 <li class="glide__slide">
-<a href="https://interwebz-cheats.com/storage/468/6ba58932-dd2b-4055-bb59-1effd2752c0e.jpg?w=1280" class="product-image-gallery">
+<a href="" class="product-image-gallery">
 <img src="https://interwebz-cheats.com/storage/468/6ba58932-dd2b-4055-bb59-1effd2752c0e.jpg" class="h-auto rounded-md shadow">
 </a>
 </li>
 <li class="glide__slide">
-<a href="https://interwebz-cheats.com/storage/469/71228bd2-afb4-4fcd-9a93-a77ebb6c1ebb.jpg?w=1280" class="product-image-gallery">
+<a href="" class="product-image-gallery">
 <img src="https://interwebz-cheats.com/storage/469/71228bd2-afb4-4fcd-9a93-a77ebb6c1ebb.jpg" class="h-auto rounded-md shadow">
 </a>
 </li>
 <li class="glide__slide">
-<a href="https://interwebz-cheats.com/storage/476/81540d10-11d9-42c2-becc-2cc9b87ab1f3.jpg?w=1280" class="product-image-gallery">
+<a href="" class="product-image-gallery">
 <img src="https://interwebz-cheats.com/storage/476/81540d10-11d9-42c2-becc-2cc9b87ab1f3.jpg" class="h-auto rounded-md shadow">
 </a>
 </li>
@@ -552,7 +552,7 @@ Learn More...
 Simple and Affordable Pricing
 </h2>
 <p class="mt-4 text-xl text-neutral-200">
-If we don't support your preferred payment method, you can use one of our resellers to purchase <a href="https://interwebz-cheats.com/community/forums/reseller.63/" class="underline transition text-neutral-200 hover:text-neutral-100">here</a>.
+If we don't support your preferred payment method, you can use one of our resellers to purchase <a href="" class="underline transition text-neutral-200 hover:text-neutral-100">here</a>.
 </p>
 </div>
 </div>
@@ -781,13 +781,13 @@ Purchase Now
 We are a well-known and reliable cheat provider that has been around since 2009. We offer premium cheats for a variety of different games.
 </p>
 <div class="flex space-x-4">
-<a href="https://www.youtube.com/c/interwebzcheats" class="transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 <span class="sr-only">YouTube</span>
 <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21.58 6.186c-.23-.86-.91-1.54-1.77-1.77 -1.56-.42-7.82-.42-7.82-.42s-6.254 0-7.814.41c-.86.23-1.54.9-1.77 1.76 -.42 1.56-.42 5.814-.42 5.814s0 4.25.41 5.814c.23.86.9 1.53 1.76 1.76 1.56.41 7.814.41 7.814.41s6.25 0 7.814-.42c.86-.23 1.53-.91 1.76-1.77 .41-1.56.41-5.814.41-5.814s0-4.254-.42-5.814Zm-11.59 8.41v-5.2c0-.39.41-.625.75-.44l4.5 2.59c.33.19.33.67 0 .86l-4.5 2.59c-.34.19-.75-.05-.75-.44Z" /></svg> </a>
-<a href="https://twitter.com/interwebzcheats" class="transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 <span class="sr-only">Twitter</span>
 <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M17 3H7C4.79 3 3 4.79 3 7v10c0 2.2 1.79 4 4 4h10c2.2 0 4-1.8 4-4V7c0-2.21-1.8-4-4-4Zm.05 6.51c0 .08 0 .17 0 .34 0 3.25-2.49 7.029-7.029 7.029 -1.38 0-2.657-.43-3.771-1.12 .17 0 .42 0 .6 0 1.11 0 2.229-.43 3.08-1.029 -1.12 0-1.971-.78-2.314-1.72 .17 0 .34.08.42.08 .25 0 .42 0 .68-.09 -1.12-.26-1.971-1.2-1.971-2.4 .34.17.68.25 1.11.34 -.69-.6-1.12-1.29-1.12-2.15 0-.43.08-.86.34-1.2 1.2 1.45 3 2.48 5.057 2.57 0-.18-.09-.35-.09-.6 0-1.38 1.11-2.49 2.48-2.49 .68 0 1.37.25 1.8.77 .6-.09 1.11-.35 1.54-.6 -.18.6-.6 1.029-1.12 1.37 .51-.09.94-.18 1.45-.43 -.35.51-.78.94-1.21 1.28Z" /></svg> </a>
-<a href="https://www.facebook.com/interwebzcheats" class="transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 <span class="sr-only">Facebook</span>
 <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M17 3H7C4.79 3 3 4.79 3 7v10c0 2.2 1.79 4 4 4h5.62v-6.961H10.27v-2.73h2.343v-2.01c0-2.324 1.42-3.6 3.49-3.6 .69-.01 1.39.03 2.09.1v2.43h-1.43c-1.13 0-1.35.53-1.35 1.32v1.73h2.7l-.36 2.72H15.39v6.96h1.58c2.2 0 4-1.8 4-4v-10c0-2.21-1.8-4-4-4Z" /></svg> </a>
 </div>
@@ -826,7 +826,7 @@ Community
 </h4>
 <ul class="mt-4 space-y-4">
 <li>
-<a href="/community/community.html class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="/community/community.html" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Community Forums
 </a>
 </li>
