--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/conversations/" class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref=" .p-navgroup" aria-label="Inbox"
+                        <a href=" " class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref=" .p-navgroup" aria-label="Inbox"
                             aria-expanded="false" aria-haspopup="true">
         <!-- <i aria-hidden="true"></i> -->
         <i class="fa-regular fa-envelope text-color" ></i>
@@ -177,14 +177,14 @@
                                 <div class="menu-footer menu-footer--split">
                                     <div class="menu-footer-main">
                                         <ul class="listInline listInline--bullet">
-                                            <li><a href="/community/conversations/">Show all</a></li>
-                                            <li><a href="/community/conversations/add">Start a new conversation</a></li>
+                                            <li><a href=" ">Show all</a></li>
+                                            <li><a href=" ">Start a new conversation</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/account/alerts" class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
+                        <a href=" " class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
                             aria-haspopup="true">
         <i aria-hidden="true"></i>
         <i class="fa-regular fa-bell text-color" ></i>
@@ -204,9 +204,9 @@
                                 <div class="menu-footer menu-footer--split">
                                     <div class="menu-footer-main">
                                         <ul class="listInline listInline--bullet">
-                                            <li><a href="/community/account/alerts">Show all</a></li>
-                                            <li><a href="/community/account/alerts/mark-read" class="js-alertsMarkRead">Mark read</a></li>
-                                            <li><a href="/community/account/preferences">Preferences</a></li>
+                                            <li><a href=" ">Show all</a></li>
+                                            <li><a href=" " class="js-alertsMarkRead">Mark read</a></li>
+                                            <li><a href=" ">Preferences</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -218,7 +218,7 @@
         <i aria-hidden="true"></i>
         <span class="p-navgroup-linkText">What's new</span>
         </a> -->
-                        <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
+                        <a href="" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
         <i aria-hidden="true"></i>
         <i class="fa-solid fa-magnifying-glass "></i>
         <!-- <span class="p-navgroup-linkText" >Search</span> -->
@@ -244,7 +244,7 @@
                                 <div class="menu-footer">
                                     <span class="menu-footer-controls">
         <button type="submit" class="button--primary button button--icon button--icon--search"><span class="button-text">Search</span></button>
-                                    <a href="/community/search/" class="button"><span class="button-text">Advanced search…</span></a>
+                                    <a href="" class="button"><span class="button-text">Advanced search…</span></a>
                                     </span>
                                 </div>
                                 <input type="hidden" name="_xfToken" value="1706274979,b8640de3b33ff33c27848e4260499c28" />
@@ -265,7 +265,7 @@
                         </li> -->
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/whats-new/latest-activity" class="p-navEl-link " data-xf-key="alt+2" data-nav-id="defaultLatestActivity">Latest activity</a>
+                                <a href="/community/Latest-activity/latest-activity.html" class="p-navEl-link " data-xf-key="alt+2" data-nav-id="defaultLatestActivity">Latest activity</a>
                             </div>
                         </li>
                         <li>
@@ -535,7 +535,7 @@ Ignoring
 </dt>
                                             <dd>
                                                 <div class="memberProfileBanner memberProfileBanner--small memberProfileBanner-u93264-l memberProfileBanner--empty fauxBlockLink" data-toggle-class data-hide-empty="true"><a href="/community/account/banner" class="fauxBlockLink-blockLink" data-xf-click="overlay"></a></div>
-                                                <a href="/community/account/banner" class="button--link button" data-xf-click="overlay"><span class="button-text">Edit profile banner</span></a>
+                                                <a href="/Error/error.html" class="button--link button" data-xf-click="overlay"><span class="button-text">Edit profile banner</span></a>
                                             </dd>
                                         </dl>
                                         <hr class="formRowSep" />
