--- a/products/products.html
+++ b/products/products.html
@@ -120,7 +120,7 @@
   
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <div class="relative z-20 grid gap-6 px-5 py-6 bg-neutral-500 sm:gap-8 sm:p-8 lg:grid-cols-2">
-            <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                 <div class="flex-shrink-0 w-10 h-10">
                 <img src="./styles/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" class="w-10 h-10 rounded shadow" alt="">
                 </div>
@@ -135,7 +135,7 @@
                 </div>
                 </div>
             </a>
-            <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                 <div class="flex-shrink-0 w-10 h-10">
                 <img src="./styles/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" class="w-10 h-10 rounded shadow" alt="">
                 </div>
@@ -150,7 +150,7 @@
                 </div>
                 </div>
             </a>
-            <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                 <div class="flex-shrink-0 w-10 h-10">
                 <img src="./styles/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" class="w-10 h-10 rounded shadow" alt="">
                 </div>
@@ -195,7 +195,7 @@
                     </div>
                     </div>
             </a>
-            <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                     <div class="flex-shrink-0 w-10 h-10">
                     <img src="./styles/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" class="w-10 h-10 rounded shadow" alt="">
                     </div>
@@ -417,7 +417,7 @@ All Products
 </h3>
 <ul class="space-y-4">
 <li class="relative pt-4 border-t border-neutral-400">
-<a href="" class="block p-2 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
+<a href="./call-of-duty-black-ops-cold-war.html" class="block p-2 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
 <div class="flex items-center space-x-4">
 <div class="flex-shrink-0">
 <img src="https://interwebz-cheats.com/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" alt="Call of Duty: Modern Warfare II / DMZ's Icon" class="w-8 h-8 rounded-md shadow">
@@ -427,7 +427,7 @@ All Products
 </a>
 </li>
 <li class="relative pt-4 border-t border-neutral-400">
-<a href="" class="block p-2 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
+<a href="./call-of-duty-black-ops-cold-war.html" class="block p-2 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
 <div class="flex items-center space-x-4">
 <div class="flex-shrink-0">
 <img src="https://interwebz-cheats.com/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" alt="Call of Duty: Modern Warfare (2019)'s Icon" class="w-8 h-8 rounded-md shadow">
@@ -437,7 +437,7 @@ All Products
 </a>
 </li>
 <li class="relative pt-4 border-t border-neutral-400">
-<a href="" class="block p-2 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
+<a href="./call-of-duty-black-ops-cold-war.html" class="block p-2 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
 <div class="flex items-center space-x-4">
 <div class="flex-shrink-0">
 <img src="https://interwebz-cheats.com/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" alt="Call of Duty: Modern Warfare III / Warzone's Icon" class="w-8 h-8 rounded-md shadow">
@@ -452,7 +452,7 @@ All Products
 <div class="col-span-9 space-y-6">
 <div class="space-y-4">
 <ul class="overflow-hidden border divide-y rounded-md shadow bg-neutral-400 border-neutral-300 divide-neutral-300">
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -498,7 +498,7 @@ Our Premium Call of Duty: Black Ops Cold War cheat is exactly what you need if y
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -521,7 +521,7 @@ Our Premium Call of Duty: Modern Warfare / Warzone cheat is exactly what you nee
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 opacity-50">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 opacity-50">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -549,7 +549,7 @@ Our Premium Call of Duty: Modern Warfare II cheat is exactly what you need if yo
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 opacity-50">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 opacity-50">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -577,7 +577,7 @@ Our Premium Call of Duty: Modern Warfare III cheat is exactly what you need if y
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -600,7 +600,7 @@ Our Premium Call of Duty: Vanguard cheat is exactly what you need if you are loo
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -623,7 +623,7 @@ Our Premium Counter-Strike 2 cheat is exactly what you need if you are looking f
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
@@ -646,7 +646,7 @@ Our Premium Counter-Strike: Source cheat is exactly what you need if you are loo
 </svg> </div>
 </li>
 </a>
-<a href="" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
 <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
 <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
 <div class="flex-shrink-0">
