--- a/dashboard/purchase-cheats.html
+++ b/dashboard/purchase-cheats.html
@@ -534,7 +534,7 @@ Purchase Cheats
                         </div>
                         <div class="space-y-4">
                             <ul class="overflow-hidden border divide-y rounded-md shadow bg-neutral-400 border-neutral-300 divide-neutral-300">
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/call-of-duty-modern-warfare-ii-dmz" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -557,7 +557,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/call-of-duty-modern-warfare-2019" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -580,7 +580,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/call-of-duty-modern-warfare-iii-warzone" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -603,7 +603,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/call-of-duty-black-ops-cold-war" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -626,7 +626,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/privacy-tool" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -649,7 +649,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/counter-strike-2" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -672,7 +672,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/call-of-duty-complete-package" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -695,7 +695,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/call-of-duty-vanguard" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -718,7 +718,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/counter-strike-source" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a  class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -741,7 +741,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/star-wars-battlefront-ii" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
@@ -764,7 +764,7 @@ Purchase Cheats
 </svg> </div>
                                     </li>
                                 </a>
-                                <a href="https://interwebz-cheats.com/dashboard/purchase-cheats/the-ultimate-package" class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
+                                <a class="flex transition-colors duration-150 hover:text-neutral-100 text-neutral-200 ">
                                     <li class="flex items-center flex-1 px-4 py-4 sm:px-6 sm:flex-row justify-between">
                                         <div class="flex flex-col space-y-2 lg:flex-row lg:space-y-0 lg:space-x-4">
                                             <div class="flex-shrink-0">
