--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/conversations/" class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref=" .p-navgroup" aria-label="Inbox"
+                        <a href="" class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref=" .p-navgroup" aria-label="Inbox"
                             aria-expanded="false" aria-haspopup="true">
         <!-- <i aria-hidden="true"></i> -->
         <i class="fa-regular fa-envelope text-color" ></i>
@@ -184,7 +184,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/account/alerts" class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
+                        <a href="" class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
                             aria-haspopup="true">
         <i aria-hidden="true"></i>
         <i class="fa-regular fa-bell text-color" ></i>
@@ -218,7 +218,7 @@
         <i aria-hidden="true"></i>
         <span class="p-navgroup-linkText">What's new</span>
         </a> -->
-                        <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
+                        <a href="" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
         <i aria-hidden="true"></i>
         <i class="fa-solid fa-magnifying-glass "></i>
         <!-- <span class="p-navgroup-linkText" >Search</span> -->
@@ -258,14 +258,14 @@
             <div class="p-sectionLinks-inner hScroller" data-xf-init="h-scroller">
                 <div class="hScroller-scroll">
                     <ul class="p-sectionLinks-list">
-                        <li>
+                        <!-- <li>
                             <div class="p-navEl ">
                                 <a href="/community/whats-new/news-feed" class="p-navEl-link " data-xf-key="alt+1" data-nav-id="defaultNewsFeed">Your news feed</a>
                             </div>
-                        </li>
+                        </li> -->
                         <li>
                             <div class="p-navEl ">
-                                <a href="" class="p-navEl-link " data-xf-key="alt+2" data-nav-id="defaultLatestActivity">Latest activity</a>
+                                <a href="/community/Latest-activity/latest-activity.html" class="p-navEl-link " data-xf-key="alt+2" data-nav-id="defaultLatestActivity">Latest activity</a>
                             </div>
                         </li>
                         <li>
@@ -280,7 +280,7 @@
                         </li>
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/logout/?t=1706610609%2Cb8cf4adc8f25f42cd5c5bf366c5b3409" class="p-navEl-link " data-xf-key="alt+5" data-nav-id="defaultLogOut">Log out</a>
+                                <a href="/Error/error.html" class="p-navEl-link " data-xf-key="alt+5" data-nav-id="defaultLogOut">Log out</a>
                             </div>
                         </li>
                     </ul>
@@ -345,16 +345,16 @@ name
                 <span class="avatar avatar--l avatar--default avatar--default--image" data-user-id="93264" title="name">
                 <span class="avatar-u93264-l"></span>
                 </span>
-                <a class="avatarWrapper-update" href="/community/account/avatar" data-xf-click="overlay"><span>Edit</span></a>
+                <a class="avatarWrapper-update" href="" data-xf-click="overlay"><span>Edit</span></a>
                 </span>
                 </span>
                 <div class="memberHeader-content memberHeader-content--info" style=" background: #362A51;">
                 <div class="memberHeader-actionTop">
                 <div class="buttonGroup">
-                <a href="/community/members/name.93264/report" class="button--link button" data-xf-click="overlay"><span class="button-text">
+                <a href="" class="button--link button" data-xf-click="overlay"><span class="button-text">
                 Report
                 </span></a>
-                <a href="/community/account/banner" class="button--link button" data-xf-click="overlay"><span class="button-text">
+                <a href="" class="button--link button" data-xf-click="overlay"><span class="button-text">
                 Edit profile banner
                 </span></a>
                 </div>
@@ -466,10 +466,10 @@ name
                 <div class="p-footer-row">
                     <div class="p-footer-row-main">
                         <ul class="p-footer-linkList">
-                            <li><a href="/community/misc/contact" data-xf-click="overlay">Contact us</a></li>
-                            <li><a href="/community/help/terms/">Terms and rules</a></li>
-                            <li><a href="/community/help/privacy-policy/">Privacy policy</a></li>
-                            <li><a href="/community/help/">Help</a></li>
+                            <li><a href="" data-xf-click="overlay">Contact us</a></li>
+                            <li><a href="">Terms and rules</a></li>
+                            <li><a href="">Privacy policy</a></li>
+                            <li><a href="">Help</a></li>
                         </ul>
                     </div>
                     <div class="p-footer-row-opposite">
