--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -376,7 +376,7 @@ Account details
                                                 <a class="blockLink " href="/community/account/security.html">
 Password and security
 </a>
-                                                <a class="blockLink " href="/Error/error.html">
+                                                <!-- <a class="blockLink " href="/Error/error.html">
 Privacy
 </a>
                                                 <a class="blockLink " href="/Error/error.html">
@@ -390,7 +390,7 @@ Following
 </a>
                                                 <a class="blockLink " href="/Error/error.html">
 Ignoring
-</a>
+</a> -->
                                             </div>
                                         </div>
                                     </div>
