--- a/community/account/security.html
+++ b/community/account/security.html
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/conversations/" class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref=" .p-navgroup" aria-label="Inbox"
+                        <a href="" class="p-navgroup-link js-badge--conversations badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="," data-menu-pos-ref=" .p-navgroup" aria-label="Inbox"
                             aria-expanded="false" aria-haspopup="true">
         <!-- <i aria-hidden="true"></i> -->
         <i class="fa-regular fa-envelope text-color" ></i>
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/community/account/alerts" class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
+                        <a href="" class="p-navgroup-link p-navgroup-link--iconic js-badge--alerts badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="." data-menu-pos-ref="< .p-navgroup" aria-label="Alerts" aria-expanded="false"
                             aria-haspopup="true">
         <i aria-hidden="true"></i>
         <i class="fa-regular fa-bell text-color" ></i>
@@ -215,13 +215,13 @@
         <i aria-hidden="true"></i>
         <span class="p-navgroup-linkText">What's new</span>
         </a> -->
-                        <a href="/community/search/" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
+                        <a href="" class="p-navgroup-link p-navgroup-link--iconic " data-xf-click="menu" data-xf-key="/" aria-label="Search" aria-expanded="false" aria-haspopup="true" title="Search">
         <i aria-hidden="true"></i>
         <i class="fa-solid fa-magnifying-glass "></i>
         <!-- <span class="p-navgroup-linkText" >Search</span> -->
         </a>
                         <div class="menu menu--structural menu--wide" data-menu="menu" aria-hidden="true">
-                            <form action="/community/search/search" method="post" class="menu-content" data-xf-init="quick-search">
+                            <form action="" method="post" class="menu-content" data-xf-init="quick-search">
                                 <h3 class="menu-header">Search</h3>
                                 <div class="menu-row">
                                     <input type="text" class="input" name="keywords" placeholder="Search…" aria-label="Search" data-menu-autofocus="true" />
@@ -262,7 +262,7 @@
                         </li> -->
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/whats-new/latest-activity" class="p-navEl-link " data-xf-key="alt+2" data-nav-id="defaultLatestActivity">Latest activity</a>
+                                <a href="/community/Latest-activity/latest-activity.html" class="p-navEl-link " data-xf-key="alt+2" data-nav-id="defaultLatestActivity">Latest activity</a>
                             </div>
                         </li>
                         <li>
@@ -277,7 +277,7 @@
                         </li>
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/logout/?t=1706610609%2Cb8cf4adc8f25f42cd5c5bf366c5b3409" class="p-navEl-link " data-xf-key="alt+5" data-nav-id="defaultLogOut">Log out</a>
+                                <a href="/Error/error.html" class="p-navEl-link " data-xf-key="alt+5" data-nav-id="defaultLogOut">Log out</a>
                             </div>
                         </li>
                     </ul>
@@ -373,7 +373,7 @@ Account details
                                                 <a class="blockLink is-selected" href="/community/account/security">
 Password and security
 </a>
-                                                <a class="blockLink " href="/Error/error.html">
+                                                <!-- <a class="blockLink " href="/Error/error.html">
 Privacy
 </a>
                                                 <a class="blockLink " href="/Error/error.html">
@@ -387,14 +387,14 @@ Following
 </a>
                                                 <a class="blockLink " href="/Error/error.html">
 Ignoring
-</a>
+</a> -->
                                             </div>
                                         </div>
                                     </div>
                                     <div class="block">
                                         <div class="block-container">
                                             <div class="block-body">
-                                                <a href="/community/logout/?t=1706610609%2Cb8cf4adc8f25f42cd5c5bf366c5b3409" class="blockLink">Log out</a>
+                                                <a href="/Error/error.html" class="blockLink">Log out</a>
                                             </div>
                                         </div>
                                     </div>
@@ -415,7 +415,7 @@ Ignoring
                                 </dt>
                                 <dd>
                                 Disabled
-                                <a href="/community/account/two-step/" class="button--link button"><span class="button-text">Change</span></a>
+                                <a href="" class="button--link button"><span class="button-text">Change</span></a>
                                 </dd>
                                 </dl>
                                 <hr class="formRowSep" />
