--- a/Forums/Announcement/Single/single.html
+++ b/Forums/Announcement/Single/single.html
@@ -544,10 +544,10 @@ You have insufficient privileges to reply here.
                 <div class="p-footer-row">
                     <div class="p-footer-row-main">
                         <ul class="p-footer-linkList">
-                            <li><a href="/community/misc/contact" data-xf-click="overlay">Contact us</a></li>
-                            <li><a href="/community/help/terms/">Terms and rules</a></li>
-                            <li><a href="/community/help/privacy-policy/">Privacy policy</a></li>
-                            <li><a href="/community/help/">Help</a></li>
+                            <li><a href="" data-xf-click="overlay">Contact us</a></li>
+                            <li><a href="">Terms and rules</a></li>
+                            <li><a href="">Privacy policy</a></li>
+                            <li><a href="">Help</a></li>
                         </ul>
                     </div>
                     <div class="p-footer-row-opposite">
