--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -361,12 +361,12 @@ Your account
                                                 <a class="blockLink " href="/Error/error.html">
 Alerts
 </a>
-                                                <a class="blockLink " href="/Error/error.html">
+                                                <!-- <a class="blockLink " href="/Error/error.html">
 Reactions received
 </a>
                                                 <a class="blockLink " href="/Error/error.html">
 Bookmarks
-</a>
+</a> -->
                                             </div>
                                             <h3 class="block-minorHeader">Settings</h3>
                                             <div class="block-body"  style="background: #483663;">
