--- a/products/call-of-duty-black-ops-cold-war.html
+++ b/products/call-of-duty-black-ops-cold-war.html
@@ -451,7 +451,7 @@ Purchase Now*
 </div>
 <div>
 <span class="flex rounded-md shadow-sm ">
-<a href="" class="inline-flex items-center justify-center border font-medium focus:outline-none transition duration-150 ease-in-out disabled:opacity-75 disabled:cursor-not-allowed px-8 py-3 text-base leading-6 rounded-md md:text-lg border border-neutral-350 text-neutral-200 bg-neutral-400 hover:bg-neutral-350 hover:text-neutral-100 focus:bg-neutral-350 focus:text-neutral-100 focus:ring ring-neutral-300 ring-opacity-75 active:text-neutral-100 active:bg-neutral-300 transition disabled:pointer-events-none disabled:opacity-75 disabled:cursor-not-allowed w-full" size="xxl" target="__blank" wire:loading.attr="disabled">
+<a href="/Forums/Announcement/Single/single.html" class="inline-flex items-center justify-center border font-medium focus:outline-none transition duration-150 ease-in-out disabled:opacity-75 disabled:cursor-not-allowed px-8 py-3 text-base leading-6 rounded-md md:text-lg border border-neutral-350 text-neutral-200 bg-neutral-400 hover:bg-neutral-350 hover:text-neutral-100 focus:bg-neutral-350 focus:text-neutral-100 focus:ring ring-neutral-300 ring-opacity-75 active:text-neutral-100 active:bg-neutral-300 transition disabled:pointer-events-none disabled:opacity-75 disabled:cursor-not-allowed w-full" size="xxl" target="__blank" wire:loading.attr="disabled">
 Learn More...
 </a>
 </span>
